<resources>
    <string name="app_name">Hard Fridge</string>
    <string name="menu_options_hello">Hello</string>
    <string name="menu_options_about">About</string>
    <string name="menu_options_clearDB">Clear DB</string>
    <string name="menu_options_addDefaultDB">Add default DB</string>
    <string name="menu_options_import_json">Import item</string>
    <string name="menu_options_addNewData">Add new</string>
    <string name="menu_options_showAll">Show all</string>
    <string name="menu_ctx_rotate_cw">Rotate CW</string>
    <string name="menu_ctx_rotate_ccw">Rotate CCW</string>
    <string name="menu_ctx_delete">Delete</string>
    <string name="menu_ctx_edit">Edit</string>
    <string name="menu_ctx_import">Import</string>
    <string name="menu_ctx_send">Send</string>
    <string name="menu_ctx_save_as_file">Save as file</string>
    <string name="email_choose">Choose an Email client :</string>
    <string name="toast_show_hello">Hello!</string>
    <string name="toast_show_all_data_deleted">OK! All data was deleted!</string>
    <string name="toast_show_go_add_new_item">Let\&apos;s add a new item!</string>
    <string name="toast_show_not_found">Nothing has been found</string>
    <string name="toast_show_good_choice">Wonderful choice!</string>
    <string name="toast_show_nothing">There is nothing!</string>
    <string name="toast_show_item_is_deleted">Item has been deleted!</string>
    <string name="toast_show_db_is_not_opened">DB is not opened!</string>
    <string name="toast_show_field_name_empty">Let\&apos;s fill field Name!</string>
    <string name="toast_show_item_is_edited">Item has been edited</string>
    <string name="toast_show_item_is_added">Item has been added</string>
    <string name="toast_show_nothing_already_exist">Nothing already exists!</string>
    <string name="toast_show_it_is_disabled">It\&apos;s disabled into your Preferences!</string>
    <string name="toast_show_try_catch">Something went wrong:(</string>
    <string name="toast_show_allowed_files">Only files *</string>
    <string name="toast_show_wrong_file">Something is wrong with a file!</string>
    <string name="toast_show_file_not_imported">That\&apos;ll never fly!</string>
    <string name="toast_show_file_yes_imported">File could be imported</string>
    <string name="toast_show_path_for_saving">File is saved to</string>
    <string name="toast_show_file_is_deleted">File has been deleted!</string>
    <string name="toast_show_nothing_happens">Nothing happens</string>
    <string name="toast_show_get_from_contacts">Let\&apos;s go and get from Contacts!</string>
    <string name="dialog_msg_clear_db">All your data will be removed. Do you want to continue?</string>
    <string name="dialog_msg_item_delete">This item will be removed. Do you want to continue?</string>
    <string name="dialog_msg_whose_help">Whose help is needed?</string>
    <string name="dialog_msg_where_take_img">Where do you want to get image from?</string>
    <string name="dialog_msg_progress_bar_message">Let\&apos;s wait</string>
    <string name="dialog_msg_file_delete">This file will be removed. Do you want to continue?</string>
    <string name="tab_column_summary">Set your token</string>
    <string name="tab_column1_title">Key word 1</string>
    <string name="tab_column1_key">name_column1</string>
    <string name="tab_column1_name">Key word 1</string>
    <string name="tab_column2_title">Key word 2</string>
    <string name="tab_column2_key">name_column2</string>
    <string name="tab_column2_name">Key word 2</string>
    <string name="tab_column3_title">Key word 3</string>
    <string name="tab_column3_key">name_column3</string>
    <string name="tab_column3_name">Key word 3</string>
    <string name="tab_column4_title">Key word 4\n(rating)</string>
    <string name="friend_phone_key">friend\&apos;s_phone</string>
    <string name="friend_phone_name">0911?</string>
    <string name="friend_phone_summary">Set your friend\&apos;s phone number</string>
    <string name="friend_phone_title">Friend\&apos;s phone number</string>
    <string name="toast_key">Show Toast</string>
    <string name="toast_title">Toast</string>
    <string name="toast_summOn">Toast show ON</string>
    <string name="toast_summOff">Toast show OFF</string>
    <string name="sound_key">Sound key</string>
    <string name="sound_title">Sound</string>
    <string name="sound_summOn">Sound ON</string>
    <string name="sound_summOff">Sound OFF</string>
    <string name="rating_key">Rating choice</string>
    <string name="rating_title">Rating</string>
    <string name="rating_summOn">Rating is taking part in the choice</string>
    <string name="rating_summOff">Rating is NOT taking part in the choice</string>
    <string name="splash_screen_key">Splash screen show</string>
    <string name="splash_screen_title">Splash screen</string>
    <string name="splash_screen_summOn">Splash screen ON</string>
    <string name="splash_screen_summOff">Splash screen OFF</string>
    <string name="clear_db_key">Clear DB</string>
    <string name="clear_db_title">Clear DB</string>
    <string name="clear_db_summOn">DB clearing is allowed</string>
    <string name="clear_db_summOff">DB clearing is disabled</string>
    <string name="del_import_file_key">Delete imported files</string>
    <string name="del_import_file_title">Delete imported files</string>
    <string name="del_import_file_summOn">Files will be deleted</string>
    <string name="del_import_file_summOff">Files won\&apos;t be deleted</string>
    <string name="folder_save_key">Folder for saved files</string>
    <string name="folder_save_name">HardFridge</string>
    <string name="folder_save_summary">Set folder name for saved files</string>
    <string name="folder_save_title">Your folder</string>
    <string name="uri_about_key">URI for ABOUT</string>
    <string name="uri_about_name">hqup.blogspot.com</string>
    <string name="uri_about_summary">Set URI for information \&apos;About\&apos;</string>
    <string name="uri_about_title">About http://</string>
    <string name="create_db_key">Create default DB</string>
    <string name="create_db_title">Add default DB</string>
    <string name="create_db_summOn">The addition of DB is allowed</string>
    <string name="create_db_summOff">The addition of DB is disabled</string>
    <string name="user_name_key">User name</string>
    <string name="user_name_name">User</string>
    <string name="user_name_summary">Set your name</string>
    <string name="user_name_title">Your name is</string>
    <string name="btntext_preferences">Preferences</string>
    <string name="btntext_search">Search!</string>
    <string name="btntext_add_data">Add new Data</string>
    <string name="btntext_del">Del</string>
    <string name="btntext_edit">Edit</string>
    <string name="btntext_help">Help</string>
    <string name="btntext_save">Save</string>
    <string name="btntext_import">Import</string>
    <string name="btntext_manual">Manual</string>
    <string name="btntext_find">Find</string>
    <string name="btntext_call_number">press to enter number</string>
    <string name="btntext_yes">Yes!</string>
    <string name="btntext_no">No</string>
    <string name="btntext_google">Google</string>
    <string name="btntext_friend">Friend</string>
    <string name="btntext_gallery">Gallery</string>
    <string name="btntext_camera">Camera</string>
    <string name="btntext_contact">From contacts</string>
    <string name="content_descript_nine_patch">NinePatchDrawable</string>
    <string name="content_descript_manual_image">It is just a picture</string>
    <string name="content_descript_item_one_img_fullscreen">It is a full-screen image for an item</string>
    <string name="content_descript_item_one_img_thumbnail">It is the thumbnail for item</string>
    <string name="content_descript_item_one_edit_img_thumbnail">It is the thumbnail for edited item</string>
    <string name="content_descript_item_one_list_thumbnail">It is the thumbnail for item one list</string>
    <string name="content_descript_item_one_list_thumbnail_frame">It is the thumbnail frame for item one list</string>
    <string name="content_descript_anim_tween">ImageView for TweenAnimation</string>
    <string name="content_descript_anim_frame">ImageView for FrameAnimation</string>
    <string name="content_descript_file_list_row">File list row Image</string>
    <string name="content_descript_home_image">Home Image</string>
    <string name="content_descript_choice_man_fly">Flying man</string>
    <string name="txt_open_the_door">Open the door and find what you want</string>
    <string name="txt_press_menu">You could press MENU</string>
    <string name="txt_set_number">Set the number</string>
    <string name="txt_call_to_item">Call to</string>
    <string name="txt_phone_temp_number">911?</string>
    <string name="txt_name_empty">Name</string>
    <string name="txt_manual_title">Manual</string>
    <string name="txt_make_your_choice">Make your choice!</string>
    <string name="txt_hi_user">Hi,</string>
    <string name="txt_db_is_empty">Data Base is EMPTY!</string>
    <string name="txt_manual_description">Good luck! Practice makes perfect!</string>
    <string name="txt_item_description_test">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="txt_manual_text">Business Contact Notebook.\n
Allows you to find a person matching the search criteria (artist/ fresco, etc.) among your friends.\n
It also can be used as a recipe book by those who is bad at cooking.\n
The more key words (0-4) you enter the more relevant result you\&apos;ll get. 
Any search for a single key word will be succesfull.
A test data base is installed by default and can be easily removed.\n\n
Enjoy.</string>
    <string name="db_name_empty">Nothing</string>
    <string name="db_name_d1">George</string>
    <string name="db_tok_1_d1">surveyor</string>
    <string name="db_tok_2_d1">Virginia</string>
    <string name="db_tok_3_d1">French and Indian War</string>
    <string name="db_text_d1">George Washington (February 22, 1732 – December 14, 1799) was the first President of the United States (1789–1797), the commander-in-chief of the Continental Army during the American Revolutionary War, and one of the Founding Fathers of the United States. He presided over the convention that drafted the Constitution, which replaced the Articles of Confederation and established the position of President.</string>
    <string name="db_name_d2">Thomas</string>
    <string name="db_tok_1_d2">law clerk</string>
    <string name="db_tok_2_d2">Virginia</string>
    <string name="db_tok_3_d2">West Point</string>
    <string name="db_text_d2">Thomas Jefferson (April 13, 1743 (April 2, 1743 O.S.) – July 4, 1826) was an American Founding Father, the principal author of the Declaration of Independence (1776) and the third President of the United States (1801–1809). </string>
    <string name="db_name_d3">Abraham</string>
    <string name="db_tok_1_d3">captain</string>
    <string name="db_tok_2_d3">perish by the sword</string>
    <string name="db_tok_3_d3">Homestead Act</string>
    <string name="db_text_d3">Abraham Lincoln (February 12, 1809 – April 15, 1865) -  was the 16th President of the United States. Lincoln abolished slavery, strengthed the national government and modernizes the economy. </string>
    <string name="db_name_d4">Alexander</string>
    <string name="db_tok_1_d4">not president</string>
    <string name="db_tok_2_d4">perish by the sword</string>
    <string name="db_tok_3_d4">Jay Treaty</string>
</resources>